--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       content="Web site created using create-react-app"
     />
 
-    <title>Photo Search App</title>
+    <title>Photo Video Search App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
